初步兼容Nukkit-MOT (#1)